force-app/main/default/objects/CampaignMember/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <formula>Contact.Account_Owner__c</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>