force-app/main/default/objects/CampaignMember/fields/Account_related__c.field-meta.xml
<CustomField>
    <fullName>Account_related__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_related</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>