force-app/main/default/objects/CampaignMember/fields/Active_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Active_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Campaign</label>
    <type>Checkbox</type>
</CustomField>