force-app/main/default/objects/CampaignMember/fields/CC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Email_Address__c</fullName>
    <description>If there is a CC email address present in the email reply (Email Campaign process)</description>
    <label>CC Email Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>