force-app/main/default/objects/CampaignMember/fields/CustomEmail__c.field-meta.xml
<CustomField>
    <fullName>CustomEmail__c</fullName>
    <formula>Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomEmail</label>
    <type>Text</type>
</CustomField>