force-app/main/default/objects/CampaignMember/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/CampaignMember/&quot; &amp;  Id &amp; &quot;/view&quot;, &quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Details</label>
    <type>Text</type>
</CustomField>