force-app/main/default/objects/CampaignMember/fields/Email_verified__c.field-meta.xml
<CustomField>
    <fullName>Email_verified__c</fullName>
    <description>Reference Contact Email verified field</description>
    <formula>TEXT(Contact.Email_verified__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email verified</label>
    <type>Text</type>
</CustomField>