force-app/main/default/objects/CampaignMember/fields/Letter_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Letter_Salutation__c</fullName>
    <description>Reference Contact Letter Salutation Field</description>
    <formula>Contact.fmlLetterSalutation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Letter Salutation</label>
    <type>Text</type>
</CustomField>