force-app/main/default/objects/CampaignMember/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO-272</description>
    <inlineHelpText>Marketing Hotline. The Opportunity that will be created will set this user as the owner. RR will be ignored</inlineHelpText>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>