force-app/main/default/objects/CampaignMember/fields/Outbound_Response__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Response__c</fullName>
    <label>Outbound Response</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Potential</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>