force-app/main/default/objects/CampaignMember/fields/Registration_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Registration_Timestamp__c</fullName>
    <label>Registration Timestamp</label>
    <type>DateTime</type>
</CustomField>