force-app/main/default/objects/CampaignMember/fields/Timestamp_Email_reply__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Email_reply__c</fullName>
    <description>This field triggers a PB process when NOT empty AND changed. The automation created an opportunity on the corresponding account if it is in RT Outbound or Research.</description>
    <inlineHelpText>This field triggers a PB process when NOT empty AND changed. The automation created an opportunity on the corresponding account if it is in RT Outbound or Research.</inlineHelpText>
    <label>Timestamp Email reply</label>
    <type>DateTime</type>
</CustomField>