force-app/main/default/objects/CampaignMember/fields/Timestamp_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Email_Sent__c</fullName>
    <description>Used for tracking Email and Webinar Campaigns</description>
    <label>Timestamp Email Sent</label>
    <type>DateTime</type>
</CustomField>